Unreviewed. Follow up fix after r246115. I changed the code to assert that we don't have duplicate native functions. It turns out we do. I will fix that here, then add back the assert. https://bugs.webkit.org/show_bug.cgi?id=198580

* Modules/webgpu/WHLSL/WHLSLCheckDuplicateFunctions.cpp:
(WebCore::WHLSL::checkDuplicateFunctions):



Canonical link: https://commits.webkit.org/212585@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246128 268f45cc-cd09-0410-ab3c-d52691b4dbfc